<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
    	android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/ServerAddTitle" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
    	android:layout_marginLeft="10dp"
        android:orientation="horizontal"
        android:weightSum="1.0" >

        <EditText
            android:id="@+id/SettingsIPET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:paddingLeft="8dp"
            android:background="@drawable/edittext"
            android:hint="@string/IPHint" />

        <EditText
            android:id="@+id/SettingsPortET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:paddingLeft="8dp"
            android:hint="@string/PortHint"
            android:background="@drawable/edittext"
            android:inputType="numberSigned" />
    </LinearLayout>

    <Button
        android:id="@+id/saveSettingsButton"
        style="@style/CustomButton"
        android:text="@string/Save"
        android:onClick="onClick"
        />
    
</LinearLayout>